--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.2.0
+black==23.12.1
 certifi==2023.11.17
 click==8.1.7
 fastapi==0.108.0
@@ -9,8 +10,11 @@ httptools==0.6.1
 httpx==0.26.0
 idna==3.6
 iniconfig==2.0.0
+mypy-extensions==1.0.0
 mysql-connector-python==8.2.0
 packaging==23.2
+pathspec==0.12.1
+platformdirs==4.1.0
 pluggy==1.3.0
 protobuf==4.21.12
 pydantic==2.5.3
