--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
 
 env:
   DB_USER: test_user
-  DB_PASS: password
-  DB_NAME: test_password
+  DB_PASS: test_password
+  DB_NAME: test_portfolio
   DB_HOST: localhost
 
 permissions:
