--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,9 @@ jobs:
 
       - name: Wait for MySQL to start
         run: |
+          sudo systemctl start mysql
           sleep 10
+          systemctl status mysql.service
 
       - name: Create MySQL database and tables
         run: |
