--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: ["main"]
 
 env:
-  DB_USER: test_user
-  DB_PASS: test_password
+  DB_USER: root
+  DB_PASS:
   DB_NAME: test_portfolio
   DB_HOST: localhost
 
