--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
         run: |
           sudo systemctl start mysql
           sleep 10
-          mysql -u root -e "CREATE USER IF NOT EXISTS ${{ env.DB_USER }} IDENTIFIED BY '${{ env.DB_PASS }}';"
-          mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO '${{ env.DB_USER }}'@'localhost';"
+          mysql -u root -proot -e "CREATE USER IF NOT EXISTS ${{ env.DB_USER }} IDENTIFIED BY '${{ env.DB_PASS }}';"
+          mysql -u root -proot -e "GRANT ALL PRIVILEGES ON *.* TO '${{ env.DB_USER }}'@'localhost';"
           ls
 
       - name: Create MySQL database and tables
