--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,13 @@ jobs:
         run: |
           sudo systemctl start mysql
           sleep 10
-          mysql -u root -proot -e "CREATE USER IF NOT EXISTS ${{ env.DB_USER }} IDENTIFIED BY '${{ env.DB_PASS }}';"
-          mysql -u root -proot -e "GRANT ALL PRIVILEGES ON *.* TO '${{ env.DB_USER }}'@'localhost';"
+          mysql -u root -proot -e "CREATE USER ${{ env.DB_USER }} IDENTIFIED BY '${{ env.DB_PASS }}';"
           ls
 
       - name: Create MySQL database and tables
         run: |
-          mysql -h ${{ env.DB_HOST }} -u ${{ env.DB_USER }} -p${{ env.DB_PASS }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
+          mysql -u root -proot -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
+          mysql -u root -proot -e "GRANT ALL PRIVILEGES ON ${{env.DB_NAME}}.* TO '${{ env.DB_USER }}'@'localhost';"
           mysql -h ${{ env.DB_HOST }} -u ${{ env.DB_USER }} -p${{ env.DB_PASS }} ${{ env.DB_NAME }} < create_tables.sql
 
       - name: Install dependencies
