--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,10 @@ jobs:
         run: |
           sudo systemctl start mysql
           sleep 10
-          mysql -u root -proot -e "CREATE USER '${{ env.DB_USER }}'@'localhost' IDENTIFIED BY '${{ env.DB_PASS }}';"
-          mysql -u root -proot -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'localhost';"
+          mysql -u root -proot -e "CREATE USER '${{ env.DB_USER }}'@'${{env.DB_HOST}}' IDENTIFIED BY '${{ env.DB_PASS }}';"
+          mysql -u root -proot -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'${{env.DB_HOST}}';"
+            mysql -u root -proot -e "FLUSH PRIVILEGES;"
+            mysql -u root -proot -e "SHOW DATABASES;"
           ls
 
       - name: Create MySQL database and tables
