--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,16 +38,19 @@ jobs:
         run: |
           sudo systemctl start mysql
           sleep 10
+
+      - name: Create user
+        run: |
           mysql -u root -proot -e "CREATE USER '${{ env.DB_USER }}'@'${{env.DB_HOST}}' IDENTIFIED BY '${{ env.DB_PASS }}';"
           mysql -u root -proot -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'${{env.DB_HOST}}';"
-            mysql -u root -proot -e "FLUSH PRIVILEGES;"
-            mysql -u root -proot -e "SHOW DATABASES;"
-          ls
+          mysql -u root -proot -e "FLUSH PRIVILEGES;"
 
       - name: Create MySQL database and tables
         run: |
           mysql -u root -proot -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
           mysql -h ${{ env.DB_HOST }} -u ${{ env.DB_USER }} -p${{ env.DB_PASS }} ${{ env.DB_NAME }} < create_tables.sql
+          mysql -u root -proot -e "SHOW DATABASES;"
+          mysql -u root -proot -e "USE ${{ env.DB_NAME }}; SHOW TABLES;"
 
       - name: Install dependencies
         run: |
