--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,14 @@ jobs:
       - name: Lint with black
         run: |
           black --check .
+
+      - name: Verify Database Existence
+        run: mysql -h ${{ env.DB_HOST }} -u ${{ env.DB_USER }} -p${{ env.DB_PASS }} -e "SHOW DATABASES;"
+
       - name: Test with pytest
         run: |
-          export DB_USER="root"
-          export DB_PASS="root"
+          export DB_USER="${{ env.DB_USER }}"
+          export DB_PASS="${{ env.DB_PASS }}"
           export DB_NAME="${{ env.DB_NAME }}"
           export DB_HOST="${{ env.DB_HOST }}"
           pytest -s
