--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ env:
   DB_USER: test_user
   DB_PASS: test_pass
   DB_NAME: test_portfolio
-  DB_HOST: localhost
+  DB_HOST: 127.0.0.1
 
 permissions:
   contents: read
