--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.6.0
 anyio==4.2.0
 black==23.12.1
+bump-my-version==0.15.4
 certifi==2023.11.17
 click==8.1.7
+dotted-notation==0.11.0
 fastapi==0.108.0
 h11==0.14.0
 httpcore==1.0.2
@@ -10,6 +12,8 @@ httptools==0.6.1
 httpx==0.26.0
 idna==3.6
 iniconfig==2.0.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
 mypy-extensions==1.0.0
 mysql-connector-python==8.2.0
 packaging==23.2
@@ -18,12 +22,18 @@ platformdirs==4.1.0
 pluggy==1.3.0
 protobuf==4.21.12
 pydantic==2.5.3
+pydantic-settings==2.1.0
 pydantic_core==2.14.6
+Pygments==2.17.2
+pyparsing==3.1.1
 pytest==7.4.4
 python-dotenv==1.0.0
 PyYAML==6.0.1
+rich==13.7.0
+rich-click==1.7.2
 sniffio==1.3.0
 starlette==0.32.0.post1
+tomlkit==0.12.3
 typing_extensions==4.9.0
 uvicorn==0.25.0
 uvloop==0.19.0
