--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,11 @@ DB_USER=username
 DB_PASS=password
 DB_NAME=portfolio
 DB_HOST=localhost
-PORT=3000
+
+AUTH0_DOMAIN=domain.auth0.com
+AUTH0_API_AUDIENCE=https://audience.auth0.com/api/v2/
+AUTH0_ISSUER=https://issuer.auth0.com/
+AUTH0_ALGORITHMS=RS256
+
+CLIENT_SECRET=secret
+CLIENT_ID=id
