--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 annotated-types==0.6.0
 anyio==4.2.0
 black==23.12.1
-bump-my-version==0.15.4
 certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+cryptography==41.0.7
 dotted-notation==0.11.0
 fastapi==0.108.0
 h11==0.14.0
@@ -21,20 +23,24 @@ pathspec==0.12.1
 platformdirs==4.1.0
 pluggy==1.3.0
 protobuf==4.21.12
+pycparser==2.21
 pydantic==2.5.3
 pydantic-settings==2.1.0
 pydantic_core==2.14.6
 Pygments==2.17.2
+PyJWT==2.8.0
 pyparsing==3.1.1
 pytest==7.4.4
 python-dotenv==1.0.0
 PyYAML==6.0.1
+requests==2.31.0
 rich==13.7.0
 rich-click==1.7.2
 sniffio==1.3.0
 starlette==0.32.0.post1
 tomlkit==0.12.3
 typing_extensions==4.9.0
+urllib3==2.1.0
 uvicorn==0.25.0
 uvloop==0.19.0
 watchfiles==0.21.0
