--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ env:
   DB_HOST: 127.0.0.1
   CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
   CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  AUTH0_DOMAIN: ${{secrets.AUTH0_DOMAIN}}
+  AUTH0_API_AUDIENCE: ${{secrets.AUTH0_API_AUDIENCE}}
+  AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
+  AUTH0_ALGORITHMS: ${{secrets.AUTH0_ALGORITHMS}}
 
 permissions:
   contents: read
@@ -69,4 +73,11 @@ jobs:
           export DB_PASS="${{ env.DB_PASS }}"
           export DB_NAME="${{ env.DB_NAME }}"
           export DB_HOST="${{ env.DB_HOST }}"
+          export CLIENT_SECRET="${{ env.CLIENT_SECRET }}"
+          export CLIENT_ID="${{ env.CLIENT_ID }}"
+          export AUTH0_DOMAIN="${{ env.AUTH0_DOMAIN }}"
+          export AUTH0_API_AUDIENCE="${{ env.AUTH0_API_AUDIENCE }}"
+          export AUTH0_ISSUER="${{ env.AUTH0_ISSUER }}"
+          export AUTH0_ALGORITHMS="${{ env.AUTH0_ALGORITHMS }}"
+
           pytest -s
